
/*------------------------------------------------------------------------------
 * AUTO GENERATED
 *----------------------------------------------------------------------------*/

syntax = "proto3";
package caikit_data_model.nlp;

/*-- MESSAGES ----------------------------------------------------------------*/


message Token {

  /*-- fields --*/
  int64 start = 1;
  int64 end = 2;
  string text = 3;
}

message TokenizationResults {

  /*-- fields --*/
  repeated caikit_data_model.nlp.Token results = 1;
  int64 token_count = 4;
}

message TokenizationStreamResult {

  /*-- fields --*/
  repeated caikit_data_model.nlp.Token results = 1;
  int64 token_count = 4;
  int64 processed_index = 2;
  int64 start_index = 3;
}
