
/*------------------------------------------------------------------------------
 * AUTO GENERATED
 *----------------------------------------------------------------------------*/

syntax = "proto3";
package caikit.runtime.Nlp;
import "caikit_data_model_nlp.proto";


/*-- MESSAGES ----------------------------------------------------------------*/

message BidiStreamingTokenizationTaskRequest {

  /*-- fields --*/
  string text_stream = 1;
}


message TokenizationTaskRequest {

  /*-- fields --*/
  string text = 1;
}


/*-- SERVICES ----------------------------------------------------------------*/

service NlpService {
  rpc BidiStreamingTokenizationTaskPredict(stream caikit.runtime.Nlp.BidiStreamingTokenizationTaskRequest) returns (stream caikit_data_model.nlp.TokenizationStreamResult);
  rpc TokenizationTaskPredict(caikit.runtime.Nlp.TokenizationTaskRequest) returns (caikit_data_model.nlp.TokenizationResults);
}
